Wed Mar 30 09:27:14 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/impl/Getter_T.cpp:
        Changed number of samples in get_many from 1 to max_samples .
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
        Solved error initilizing array for get_many test.


Tue Mar 29 12:14:02 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Receiver/I2C_Shapes_Receiver.cpp:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Proxies/ReadWrite/Receiver/Proxy_RW_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Reader/Sender/Reader_Test_Sender_exec.cpp:
        * tools/IDL3_to_IDL2/basic_visitor.h:
        * tools/IDL3_to_IDL2/be_global.h:
        * tools/IDL3_to_IDL2/be_helper.h:
        * tools/IDL3_to_IDL2/identifier_helper.h:
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.h:
        * tools/IDL3_to_IDL2/idl3p_checking_visitor.h:
        * tools/IDL3_to_XMI/be_global.h:
        * tools/IDL3_to_XMI/be_helper.h:
        * tools/IDL3_to_XMI/identifier_helper.h:
          Doxygen changes

Tue Mar 29 09:34:03 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
          Removed try/catch in ccm_activate which isn't needed anymore after
          we removed caching of the receptacles

Mon Mar 28 07:25:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * performance-tests/Protocols/Sender/Custom_Network_Priority_Mapping.h:
        * tests/IDL_Test/IDL3_Plus/KitchenSink.mpc:
        * tools/IDL3_to_IDL2/basic_visitor.h:
        * tools/IDL3_to_IDL2/be_global.h:
        * tools/IDL3_to_IDL2/be_global.cpp:
        * tools/IDL3_to_IDL2/be_helper.h: